# Genesis_Algo

./: .env.example  .gitignore  .replit  MT5_GENESIS_EA_INSTRUCTIONS.md  MT5_GENESIS_EA_fixed_connectivity.mq5  MT5_GENESIS_EA_fixed_v13_big_arrows.mq5  MT5_GENESIS_EA_fixed_v13_big_arrows_corrected.mq5  MT5_GENESIS_EA_fixed_v14.mq5  MT5_ReportBot.mq5  MT5_ReportBot_fixed_v2.mq5  MT5_ReportBot_v1.05.mq5  README_TRADES_IMPORT.md  RESTORE_POINT.md  add_discord_monitor_job.py  add_exit_monitor_job.py  add_missing_trades.py  alembic.ini  app.py  cancel_all_signals.py  capture_job.py  chart_generator.py  chart_generator_basic.py  chart_generator_example.py  chart_utils.py  charts_page.html  check_exit_system.py  check_mt5_trades.py  check_signals.py  cleanup_duplicates.py  cleanup_trades.py  config.py  config.yaml  create_eurusd_override_signal.py  create_exit_monitor.py  create_high_confidence_signal.py  create_override_signal.py  create_test_filtered_signal.py  create_test_signal.py  current_page.html  current_page.html.backup  (+53 more)
alembic/: env.py
archive/: README.txt  import_trades_fixed2.py
attached_assets/: GENESIS_Replit_Brief_v2.docx  MT5_GENESIS_EA.mq5  MT5_GENESIS_EA_fixed_v13_big_arrows.mq5  MT5_GENESIS_EA_fixed_v3.mq5  MT5_GENESIS_EA_fixed_v9.mq5  MT5_ReportBot.mq5  Pasted--Guiding-code-updates-The-user-needs-precise-code-changes-for-a-multi-file-modification-First-1746430922212.txt  Pasted--MT5-R-1747379852523.txt  Pasted--Return-symbol-s-digits-1746315037489.txt  Pasted--Return-symbol-s-digits-1746315156848.txt  Pasted--Return-symbol-s-digits-1746318039360.txt  (+35 more)
(+123 files in other folders)
