[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "boto3>=1.38.8",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.1",
    "mplfinance>=0.12.10b0",
    "openai>=1.77.0",
    "pandas>=2.2.3",
    "pandas-ta>=0.3.14b0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "redis>=6.0.0",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
]
